[gd_scene load_steps=35 format=3 uid="uid://xt4tqlyc1r0c"]

[ext_resource type="Script" path="res://esperimenti/macchinina/veicolobruto.gd" id="1_3ecxm"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ProcessoreFisicaMotore.gd" id="1_dr80e"]
[ext_resource type="Material" uid="uid://dno7msnsfvly8" path="res://esperimenti/macchinina/new_standard_material_3d.tres" id="1_pahb5"]
[ext_resource type="Script" path="res://esperimenti/macchinina/tracciamerda.gd" id="2_5wr2a"]
[ext_resource type="Script" path="res://esperimenti/macchinina/Transmission.gd" id="2_7bsp6"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponenteMotore.gd" id="3_bufa2"]
[ext_resource type="Script" path="res://Sistema audio/RiproduttoreAudio3D.gd" id="3_hnyor"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponentePistone.gd" id="4_ggd7c"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponenteMotorinoAvviamento.gd" id="4_xwk1h"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponenteAlberoMotore.gd" id="5_eyt0b"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponenteVolano.gd" id="7_55lvu"]
[ext_resource type="Script" path="res://Sim Motore/Componenti Simulazione Fisica/ComponenteEcu.gd" id="8_258e5"]
[ext_resource type="Texture2D" uid="uid://ceqwslxjhbfrs" path="res://test mappa apertura.png" id="8_c7r42"]
[ext_resource type="Script" path="res://Sistema audio/CampionatorePistone.gd" id="11_gfwda"]
[ext_resource type="Script" path="res://esperimenti/macchinina/TransGearRatio.gd" id="13_gyaip"]
[ext_resource type="Script" path="res://Sim Motore/Debug/2d/Grafico2D.gd" id="14_7ff5f"]
[ext_resource type="Script" path="res://Sim Motore/Debug/Parametri/DebugParametri.gd" id="15_lga2q"]
[ext_resource type="Texture2D" uid="uid://dj4hqjushhfn" path="res://Sim Motore/UITemp/Senza nome.png" id="16_7ucpb"]
[ext_resource type="Script" path="res://Sim Motore/UITemp/Speedometer.gd" id="17_tup3l"]
[ext_resource type="Texture2D" uid="uid://568x0t34bumb" path="res://Sim Motore/UITemp/lancec.png" id="18_o808g"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gvvnf"]

[sub_resource type="Sky" id="Sky_wsytr"]
sky_material = SubResource("ProceduralSkyMaterial_gvvnf")

[sub_resource type="Environment" id="Environment_8nkkr"]
background_mode = 2
sky = SubResource("Sky_wsytr")
ambient_light_source = 3
reflected_light_source = 2
tonemap_mode = 1
tonemap_exposure = 0.71
tonemap_white = 0.92
ssao_enabled = true
ssil_enabled = true

[sub_resource type="Resource" id="Resource_pcuad"]
script = ExtResource("4_xwk1h")
riduzione = 15.0
max_velocita_rpm = 800.0
coppia_nm = 7260.0

[sub_resource type="Resource" id="Resource_qp0f5"]
script = ExtResource("4_ggd7c")
offset_rotazione = 0.0
larghezza_albero_cm = 5.0
lunghezza_biella_cm = 6.0
volume_extra_cm = 1.0
alesaggio_cm = 12.0
portata_entrata_aria = 4.0
portata_uscita_aria = 8.0

[sub_resource type="Resource" id="Resource_y6q42"]
script = ExtResource("5_eyt0b")
pistoni = Array[ExtResource("4_ggd7c")]([SubResource("Resource_qp0f5")])
motorino_avviamento = SubResource("Resource_pcuad")

[sub_resource type="Resource" id="Resource_4ox7y"]
script = ExtResource("7_55lvu")
raggio = 0.4
massa = 30.0

[sub_resource type="Gradient" id="Gradient_af1oy"]
offsets = PackedFloat32Array(0.184685, 0.400901, 0.743243)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pak3r"]
gradient = SubResource("Gradient_af1oy")
fill = 1
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_5xi7l"]
script = ExtResource("8_258e5")
velocita_aggiornamento_ecu_hz = 40
rpm_massimi = 7500.0
miscela_piu_povera = 12.5
miscela_piu_ricca = 12.5
mappa_stechiometrica = SubResource("GradientTexture2D_pak3r")
apertura_minima = 0.001
apertura_massima = 1.0
mappa_apertura = ExtResource("8_c7r42")

[sub_resource type="BoxShape3D" id="BoxShape3D_ypd2x"]
size = Vector3(1.03353, 0.560202, 2.04539)

[sub_resource type="Resource" id="Resource_03dod"]
script = ExtResource("13_gyaip")
n = 5
over_d = 6
teeth_multiplier = 3

[sub_resource type="Resource" id="Resource_vyi5c"]
script = ExtResource("13_gyaip")
n = 1
over_d = 2
teeth_multiplier = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3xsv"]
bg_color = Color(0, 0, 0, 0.419608)
border_width_left = 8
border_color = Color(0.329412, 0.360784, 0.8, 0.858824)

[node name="macina" type="Node3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(0.999166, -0.0408294, 0, 0.0408294, 0.999166, 0, 0, 0, 1, 10.4951, 0.18712, 0)
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(0.521513, -0.0213108, -0.852977, 0.0408294, 0.999166, 0, 0.852266, -0.0348265, 0.521948, 8.98691, 0.18712, 6.09803)
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(-0.0978833, 0.00399985, -0.99519, 0.0408294, 0.999166, 1.94441e-09, 0.99436, -0.040633, -0.097965, 0.467442, 0.18712, 8.3528)
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(-0.60637, 0.0247784, -0.794796, 0.0408294, 0.999166, 2.03513e-09, 0.794133, -0.032451, -0.606877, -7.96918, 0.187119, 5.4969)
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D6" type="CSGBox3D" parent="."]
transform = Transform3D(-0.965865, 0.0394686, 0.25602, 0.0408294, 0.999166, 1.10941e-09, -0.255806, 0.0104531, -0.966672, -11.5351, 0.187119, -2.58816)
use_collision = true
size = Vector3(15.2688, 1, 14.1019)
material = ExtResource("1_pahb5")

[node name="CSGBox3D7" type="CSGBox3D" parent="."]
transform = Transform3D(-0.154909, 0.00633011, 0.987909, 0.0408294, 0.999166, 1.35792e-09, -0.987085, 0.0403357, -0.155038, 0.662259, 0.187121, -10.1151)
use_collision = true
size = Vector3(15.2688, 1, 29.8945)
material = ExtResource("1_pahb5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8nkkr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.306144, 0.951985, 0, -0.951985, 0.306144, 0, 9.06457, 0)
light_color = Color(1, 0.976471, 0.964706, 1)

[node name="ProcessoreFisicaMotore" type="Node" parent="." node_paths=PackedStringArray("motori")]
script = ExtResource("1_dr80e")
motori = [NodePath("../VehicleBody3D/ComponenteMotore")]
rallentamento_slow_motion = 0.1

[node name="Marker3D2" type="Marker3D" parent="." node_paths=PackedStringArray("traccia")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43764, 0)
script = ExtResource("2_5wr2a")
traccia = NodePath("../VehicleBody3D")

[node name="Camera3D" type="Camera3D" parent="Marker3D2"]
transform = Transform3D(1, 0, 0, 0, 0.99567, 0.0929614, 0, -0.0929614, 0.99567, 0, 0.94178, 2.70265)

[node name="VehicleBody3D" type="VehicleBody3D" parent="." node_paths=PackedStringArray("trans")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43764, 0)
mass = 5.58
script = ExtResource("1_3ecxm")
trans = NodePath("Transmission")

[node name="RiproduttoreAudio3D" type="AudioStreamPlayer3D" parent="VehicleBody3D" node_paths=PackedStringArray("componente_audio_precedente")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21266, 0.0681366, 0.922436)
script = ExtResource("3_hnyor")
componente_audio_precedente = NodePath("../CampionatorePistone")
dc_offset_hz = 102
max_samples_buffer_length = 150

[node name="ComponenteMotore" type="Node" parent="VehicleBody3D" node_paths=PackedStringArray("griglia_parametri", "audio", "speedometer", "grafici")]
script = ExtResource("3_bufa2")
coefficiente_attrito_meccanico_totale = 0.16
albero_motore = SubResource("Resource_y6q42")
volano = SubResource("Resource_4ox7y")
ecu = SubResource("Resource_5xi7l")
velocita_debug_lento_hz = 1200
griglia_parametri = NodePath("../../UI/Debug parametri")
audio = [NodePath("../CampionatorePistone")]
speedometer = NodePath("../../UI/speedometer")
grafici = NodePath("../../grafici")
guidato = true

[node name="CampionatorePistone" type="Node" parent="VehicleBody3D"]
script = ExtResource("11_gfwda")
correction_delta_amount = 0.204

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.223278, 0)
shape = SubResource("BoxShape3D_ypd2x")

[node name="Marker3D" type="Marker3D" parent="VehicleBody3D"]

[node name="fr" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.481901, 0, 0.836508)
use_as_steering = true
wheel_radius = 0.25

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleBody3D/fr"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.305292
height = 0.187125

[node name="fl" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.482, 0, 0.837)
use_as_steering = true
wheel_radius = 0.25

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleBody3D/fl"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.305292
height = 0.187125

[node name="rr" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.481901, 0, -0.743426)
use_as_traction = true
wheel_radius = 0.25

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleBody3D/rr"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.305292
height = 0.187125

[node name="rl" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.482, 0, -0.742934)
use_as_traction = true
wheel_radius = 0.25

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleBody3D/rl"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.305292
height = 0.187125

[node name="Transmission" type="Node3D" parent="VehicleBody3D" node_paths=PackedStringArray("engine")]
script = ExtResource("2_7bsp6")
base_ratio = 2.875
engine = NodePath("../ComponenteMotore")
gearratio = Array[ExtResource("13_gyaip")]([SubResource("Resource_03dod"), SubResource("Resource_vyi5c")])
reverse_gears = Array[Array]([[0]])
forward_gears = Array[Array]([[0], [0, 0], [0, 1], [0, null]])

[node name="grafici" type="Node2D" parent="."]

[node name="moli_carburante" type="Node2D" parent="grafici"]
position = Vector2(6, 278)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
spessore_linea = 2.0
colore_sfondo = Color(0, 0, 0, 0)
colore_linea = Color(0.627451, 0.27451, 0.203922, 1)
velocita = 0.005
valore_massimo = 0.01

[node name="moli_ossigeno" type="Node2D" parent="grafici"]
position = Vector2(6, 342)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0)
velocita = 0.005
valore_massimo = 0.01

[node name="moli_scarico" type="Node2D" parent="grafici"]
position = Vector2(6, 405)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0)
colore_linea = Color(0.627451, 0.521569, 0.258824, 1)
velocita = 0.005
valore_massimo = 0.01

[node name="pressione" type="Node2D" parent="grafici"]
position = Vector2(6, 469)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0)
colore_linea = Color(0, 0.0745098, 1, 1)
velocita = 0.005
valore_massimo = 1e+06

[node name="temperatura" type="Node2D" parent="grafici"]
position = Vector2(6, 534)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0)
colore_linea = Color(1, 0.0235294, 0, 1)
velocita = 0.005
valore_massimo = 500.0

[node name="rpm" type="Node2D" parent="grafici"]
position = Vector2(6, 595)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0)
colore_linea = Color(0, 1, 0.0588235, 1)
velocita = 0.005
valore_massimo = 5000.0

[node name="deltatime" type="Node2D" parent="grafici"]
position = Vector2(6, 205)
script = ExtResource("14_7ff5f")
larghezza = 650
altezza = 60.0
colore_sfondo = Color(0, 0, 0, 0.443137)
colore_linea = Color(1, 0.172549, 0.972549, 1)
velocita = 0.005
valore_massimo = 0.1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug parametri" type="GridContainer" parent="UI"]
layout_mode = 1
columns = 5
script = ExtResource("15_lga2q")
larghezza_minima = 180.0
stile_testo = SubResource("StyleBoxFlat_d3xsv")

[node name="speedometer" type="TextureRect" parent="UI"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("16_7ucpb")
script = ExtResource("17_tup3l")

[node name="TextureRect2" type="TextureRect" parent="UI/speedometer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(200, 200)
texture = ExtResource("18_o808g")
